# agentic-target-evidence

./: .commitlintrc.json  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE.md  README.md  alembic.ini  docker-compose.yml  make.bat  pyproject.toml  release-please-config.json  run_analysis.py
.github/workflows/: ci.yml  release-ghcr.yml
config/: disease_class.yaml  disease_class_rules.yaml  disease_tissue.yaml  evidence_hierarchy.yaml  gbd_cause_crosswalk.yaml  otel-collector.yaml  routing.yaml  scoring.yaml
docs/: README.md  agents.md  architecture.md  components.md  data_sources.md  developers.md  faq.md  lenses.md  mcp_gateway.md  mcp_tutorial.md  restricted.md  tutorial.md
docs/examples/: report.md
scripts/: build_scimago_index.py  uspto_abstract_ocr.py
skills/: biology_lens.md  claim_extraction.md  clinical_lens.md  commercial_lens.md  druggability.md  gap_detection.md  genetics_lens.md  investigator.md  langfuse_project_naming.md  pubmed_query_craft.md  regulatory_lens.md  safety_lens.md  source_quality_sjr.md  verdict_qa.md
src/: run_analysis.py
src/agents/: _common.py
src/agents/interpretation/: _lens_base.py
src/agents/planner/: agent.py  contract.py  main.py
src/capabilities/competitor_monitoring/: README.md  workflow.py
src/capabilities/indication_expansion/: README.md  workflow.py
src/capabilities/target_prioritization/: README.md  workflow.py
src/capabilities/target_validation/: README.md  gating.py  workflow.py
src/core/: batching.py  evidence_text.py  exceptions.py  http.py  json_utils.py
src/core/a2a/: __init__.py  client.py  middleware.py  run_service.py  server.py
src/core/checkpoint/: __init__.py  pg_checkpointer.py
src/core/persistence/: artifact_store.py  db.py  models.py
src/core/routing/: __init__.py  classify.py  policy.py  router.py
src/core/telemetry/: __init__.py  langfuse.py  projects.py  setup.py
src/harness/: __init__.py  base_agent.py  context.py  contract.py  loop_guard.py  skills.py
src/mcp_gateway/: chat_app.py  server.py
src/mcp_servers/chembl/: server.py  tools.py
src/mcp_servers/clingen/: server.py  tools.py
src/mcp_servers/clinicaltrials/: server.py  tools.py
src/mcp_servers/depmap/: server.py  tools.py
src/mcp_servers/dgidb/: server.py  tools.py
src/mcp_servers/druggability/: server.py  tools.py
src/mcp_servers/encode/: server.py  tools.py
src/mcp_servers/expression_atlas/: server.py  tools.py
src/mcp_servers/gbd/: server.py  tools.py
src/mcp_servers/gencc/: server.py  tools.py
src/mcp_servers/gnomad/: server.py  tools.py
src/mcp_servers/gtex/: server.py  tools.py
src/mcp_servers/gwas_catalog/: server.py  tools.py
src/mcp_servers/impc/: server.py  tools.py
src/mcp_servers/internal_data/: server.py  tools.py
src/mcp_servers/omim/: server.py  tools.py
src/mcp_servers/ontology/: server.py  tools.py
src/mcp_servers/openalex/: server.py  tools.py
src/mcp_servers/openfda/: server.py  tools.py
src/mcp_servers/opentargets/: server.py  tools.py
src/mcp_servers/orphanet/: server.py  tools.py
src/mcp_servers/project_score/: server.py  tools.py
src/mcp_servers/pubmed/: server.py  tools.py
src/mcp_servers/scimago/: server.py  tools.py
src/mcp_servers/spoke/: server.py  tools.py
src/mcp_servers/ttd/: server.py  tools.py
src/mcp_servers/uniprot/: server.py  tools.py
src/mcp_servers/uspto/: tools.py  (+2 more)
src/schemas/: __init__.py  evidence.py  knowledge_graph.py  messages.py  state.py  verdicts.py
src/services/: __init__.py  _common.py
tests/: conftest.py
tests/agents/: conftest.py
tests/core/: test_evidence_text.py
tests/harness/: test_base_agent.py  test_contract.py  test_loop_guard.py  test_skills.py
tests/mcp_gateway/: test_chat_app.py  test_server.py
tests/mcp_servers/: test_chembl.py  test_clingen.py  test_clinicaltrials.py  test_depmap.py  test_dgidb.py  test_druggability.py  test_encode.py  test_expression_atlas.py  test_gbd.py  test_gencc.py  test_gnomad.py  test_gtex.py  test_gwas_catalog.py  test_impc.py  test_internal_data.py  test_omim.py  test_ontology.py  test_openalex.py  test_openfda.py  test_opentargets.py  test_orphanet.py  test_project_score.py  test_pubmed.py  test_scimago.py  test_spoke.py  test_ttd.py  test_uniprot.py  test_uspto.py  test_uspto_abstract_pdf.py
tests/schemas/: test_evidence.py  test_knowledge_graph.py  test_messages.py  test_state.py  test_verdicts.py
tests/services/: test_decision_services.py  test_evidence_services.py  test_retrieval_services.py  test_suitability.py
tests/smoke/: test_pipeline_e2e.py  test_uspto_smoke.py
(+148 files in other folders)
